Issue #3446340 by finnsky, rkoller: Fix z-index

--- a/core/modules/navigation/css/components/admin-toolbar.css
+++ b/core/modules/navigation/css/components/admin-toolbar.css
@@ -304,7 +304,7 @@ body {
 }
 @media (min-width: 64rem) {
   .admin-toolbar__footer {
-    --admin-toolbar-z-index-footer: 1;
+    --admin-toolbar-z-index-footer: -1;
 
     position: sticky;
     bottom: 0;
